--- a/Mnpic/app/src/main/res/values/strings.xml
+++ b/Mnpic/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_details_classify">DetailsClassifyActivity</string>
+    <string name="title_activity_photo_details">PhotoDetailsActivity</string>
 </resources>
