--- a/Mnpic/app/src/main/res/values/strings.xml
+++ b/Mnpic/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Mnpic</string>
+    <string name="app_name">美女图片</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_base">BaseActivity</string>
 
